Closed Bug 1323617 Opened 8 years ago Closed 8 years ago

WebGL conformance tests for canvas_sub_rectangle test fail

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox50 --- disabled
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

(Whiteboard: gfx-noted)

Attachments

(2 files)

      No description provided.
Whiteboard: gfx-noted
Comment on attachment 8819114 [details]
Bug 1323617 - Don't assert for performance trap when srcPremult == dstPremult, even if the formats allow us to skip premult. -

https://reviewboard.mozilla.org/r/98956/#review99306
Attachment #8819114 - Flags: review?(ethlin) → review+
Comment on attachment 8818760 [details]
Bug 1323617 - Fix canvas_sub_rectangle tests. -

https://reviewboard.mozilla.org/r/98702/#review99300

::: dom/canvas/TexUnpackBlob.cpp:248
(Diff revision 2)
> -                                funcName);
> -        return false;
> -    }
> -    const uint32_t skipBytes = offset.value();
>  
> -    auto const srcBegin = srcBytes + skipBytes;
> +    *out_begin = srcBegin;

Why not skipping bytes now?

::: dom/canvas/TexUnpackBlob.cpp:698
(Diff revision 2)
> +
> +    ////
>  
>      WebGLTexelFormat srcFormat;
>      uint8_t srcBPP;
> -    if (!GetFormatForSurf(mSurf, &srcFormat, &srcBPP)) {
> +    bool alphaPremultMatters;

Is 'alphaPremultMatters' an unnecessary variable?
Comment on attachment 8818760 [details]
Bug 1323617 - Fix canvas_sub_rectangle tests. -

https://reviewboard.mozilla.org/r/98702/#review99300

> Why not skipping bytes now?

We just convert the whole source buffer now, instead of only what's used.

> Is 'alphaPremultMatters' an unnecessary variable?

Yes.
Comment on attachment 8818760 [details]
Bug 1323617 - Fix canvas_sub_rectangle tests. -

https://reviewboard.mozilla.org/r/98702/#review99516
Attachment #8818760 - Flags: review?(ethlin) → review+
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/49141c456780
Fix canvas_sub_rectangle tests. - r=ethlin
https://hg.mozilla.org/integration/mozilla-inbound/rev/6e5513e34226
Don't assert for performance trap when srcPremult == dstPremult, even if the formats allow us to skip premult. - r=ethlin
https://hg.mozilla.org/mozilla-central/rev/49141c456780
https://hg.mozilla.org/mozilla-central/rev/6e5513e34226
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
I tried to send a try with the attached patch. The test result only covers the test cases in /canvas_sub_rectangle. From this link, I don't see any crash but still have fail items.


[1]: https://treeherder.mozilla.org/#/jobs?repo=try&revision=9ad0cc87c00792c52548863f9408f890b2c304b4
Comment on attachment 8818760 [details]
Bug 1323617 - Fix canvas_sub_rectangle tests. -

Approval Request Comment
[Feature/Bug causing the regression]: webgl2
[User impact if declined]:
[Is this code covered by automated tests?]:
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]: 
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]:
[Why is the change risky/not risky?]:
[String changes made/needed]:

Approval Request Comment
[Feature/Bug causing the regression]:
[User impact if declined]:
[Is this code covered by automated tests?]:
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]: 
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]:
[Why is the change risky/not risky?]:
[String changes made/needed]:

(this and other patches)
Attachment #8818760 - Flags: approval-mozilla-beta?
Attachment #8818760 - Flags: approval-mozilla-aurora?
Comment on attachment 8818760 [details]
Bug 1323617 - Fix canvas_sub_rectangle tests. -

Fix a WebGL 2 related issue. Beta51+ and Aurora52+. Should be in 51 beta 10.
Attachment #8818760 - Flags: approval-mozilla-beta?
Attachment #8818760 - Flags: approval-mozilla-beta+
Attachment #8818760 - Flags: approval-mozilla-aurora?
Attachment #8818760 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: