Bug 1323617 - Fix canvas_sub_rectangle tests. (flattened) - r=ethlin a=gchang

MozReview-Commit-ID: 8wWDiiyp7ZS